# copilot

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: bot.rs  constants.rs  main.rs
src/cli/: console.rs  constants.rs  help.rs  mod.rs  setup_roles.rs  show_guilds.rs
src/commands/: assign_role.rs  help.rs  mod.rs  ping.rs  reaction_roles.rs  time.rs
src/handlers/: message.rs  mod.rs  reaction.rs  ready.rs
