[package]
name = "copilot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
chrono = "0.4.40"
chrono-tz = "0.10.1"
colored = "3.0.0"
dotenv = "0.15.0"
rand = "0.9.0"
serenity = { version = "0.12.0", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
] }
shuttle-runtime = "0.53.0"
shuttle-serenity = "0.53.0"
tokio = "1.26.0"
tracing = "0.1.37"
